--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ body {
 
   .hero {
     position: relative;
-    background: url('images/home_page_1.jpg') no-repeat center center;
-    background-size: cover;
     color: white;
     height: 100vh;
     display: flex;
@@ -29,6 +27,17 @@ body {
     padding: 0 2rem;
     box-sizing: border-box;
   }
+
+  .background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+  
   
   .hero::before {
     content: "";
