--- a/style.css
+++ b/style.css
@@ -230,6 +230,8 @@ body {
   color: black;
   font-weight: 600;
   margin-bottom: 0.1rem;
+  opacity: 1;
+  filter: nones
 }
 
 .testimonial-role {
@@ -239,10 +241,6 @@ body {
   margin-bottom: 0.6rem;
 }
 
-.testimonial p {
-  font-size: 0.95rem;
-  color: #444;
-}
 
 
 
