--- a/style.css
+++ b/style.css
@@ -227,8 +227,9 @@ body {
 }
 
 .testimonial-name {
-  color: black;
-  font-weight: 600;
+  color: #6a1b9a;
+  font-size: large;
+  font-weight: bold;
   margin-bottom: 0.1rem;
   opacity: 1;
   filter: nones
